# PICTRIP

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/: pull_request_template.md
.github/scripts/: check-admin-mockup-drift.sh
.github/workflows/: backend-ci.yml  backend-deploy.yml  claude-review.yml  codeql.yml  mobile-ci.yml  mobile-deploy.yml  mobile-ota.yml  pipeline-ci.yml  pipeline-deploy.yml  pipeline-sync.yml  pr-check.yml  web-ci.yml  weekly-deep-check.yml
admin/: README.md
admin/mockups/: curation.html  health.html  history.html  index.html  login.html
admin/specs/: A01-admin-console.md
backend/: Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/.superpowers/sdd/: final-fix-report.md
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260525_0001_init_pgvector_and_moods.py  20260526_0002_usr_tables.py  20260527_0003_spt_tables.py  20260527_0004_remaining_domains.py  20260527_0005_schema_v1_2_alignment.py  20260530_0006_spot_images_unique_sort.py  20260531_0007_usr_sessions_devices.py  20260604_0008_spt_search_trgm.py  20260606_0009_spt_concentration.py  20260607_0010_drop_dead_tables.py  20260621_0011_curations.py  20260622_0012_spots_image_pool_idx.py  20260623_0013_drop_dead_columns.py  20260623_0014_drop_nongoal_tables.py  20260625_0015_users_password_hash.py  20260627_0016_admin_users.py  20260628_0017_embedding_failures.py
backend/app/: config.py  main.py
backend/app/core/: auth.py  db.py  embedding.py  error_handlers.py  exceptions.py  kakao_local.py  kakao_oidc.py  kto_client.py  kto_images.py  llm_client.py  logging.py  middleware.py  nickname.py  oidc.py  passwords.py  ratelimit.py  redis.py  schemas.py  text.py  time.py  version.py
backend/app/modules/admin/: __init__.py  models.py  repositories.py  routes.py  schemas.py  security.py  services.py  triggers.py
backend/app/modules/admin/static/: README.md  curation.html  health.html  history.html  index.html
backend/app/modules/admin/static/assets/: admin.css  admin.js  curation.css  curation.js
backend/app/modules/courses/: __init__.py  models.py  routes.py  schemas.py
backend/app/modules/courses/services/: __init__.py  draft.py  rows.py  storage.py
backend/app/modules/images/: __init__.py  embedding_job.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/modules/map/: __init__.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/modules/recommendations/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/spots/: __init__.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/modules/spots/services/: __init__.py  cards.py  catalog.py  curations.py  detail.py  feed.py  nearby.py  region.py  related.py  rows.py  saved.py  similar.py  trending.py
backend/app/modules/system/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/taste/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/users/: __init__.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/scripts/: backfill_embeddings.py  notify_daily.py  seed_curations.py  seed_moods.py  set_admin_password.py  sync_concentration.py  warm_spot_details.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_auth.py  test_admin_curations.py  test_admin_embedding.py  test_admin_trigger.py  test_auth_denylist.py  test_auth_exceptions.py  test_auth_jwt.py  test_auth_security.py  test_auth_token_pair.py  test_card_serialization.py  test_consents.py  test_core_nickname.py  test_core_passwords.py  test_core_text.py  test_core_time.py  test_courses_course_crud_routes.py  test_courses_course_draft.py  test_curation_detail.py  test_embedding_job.py  test_health.py  test_home_feed.py  test_images_services_neighbors.py  test_images_services_neighbors_by_vector.py  test_kakao_oidc.py  test_map_categories.py  test_map_nearby.py  test_map_region.py  test_map_spots_seam.py  test_migrations_curations.py  test_migrations_drop_dead_columns.py  test_migrations_drop_nongoal.py  test_migrations_image_pool.py  test_oauth_providers.py  test_recommendations_today_inspo_routes.py  test_recommendations_today_inspo_service.py  test_redis_client.py  test_regions_tree.py  test_remaining_constraints.py  (+34 more)
deploy/api-host/: .deploy.env.example  deploy.sh  docker-compose.yml
deploy/monitoring/: docker-compose.yml  prometheus.yml
docs/mockups/: 01-splash.html  02-onboarding.html  03-login.html  04-permissions.html  05-home.html  06-curation.html  07-spot.html  08-photo-select.html  09-analyzing.html  10-result.html  11-map.html  12-region-picker.html  13-saved.html  14-profile.html  15-profile-states.html  16-legal.html  admin-curation-studio.html  index.html
docs/plans/: 2026-06-28-pipeline-sync-daily.md
docs/requirements/: PicTrip_개발요구사항.xlsx
docs/schema-docs/: atlas.css  curations.html  index.html  spots.html  users.html
docs/specs/: 2026-06-25-mockup-fidelity-5fixes-design.md  README.md
mobile/: .env.example  .gitignore  .prettierignore  app.json  eas.json  eslint.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
pipeline/: .env.example  Dockerfile  README.md  pyproject.toml
pipeline/src/pictrip_data/: cli.py  config.py  db.py
pipeline/src/pictrip_data/dashboard/: app.py
pipeline/src/pictrip_data/kto/: client.py  schemas.py
pipeline/src/pictrip_data/master/: load_codes.py
pipeline/src/pictrip_data/sync/: audit.py  daily.py  refcodes.py  upsert.py
pipeline/tests/: conftest.py  test_audit.py  test_cli.py  test_client.py  test_config.py  test_dashboard.py  test_load_codes.py  test_schemas.py  test_sync_daily.py  test_upsert.py
pipeline/tests/fixtures/: sync_list_response.json
web/: _headers  _redirects  index.html
web/.well-known/: apple-app-site-association  assetlinks.json
web/curations/: index.html
web/functions/: _lib.js
web/legal/: data-sources.html  index.html  legal.css  location.html  (+2 more)
(+218 files in other folders)
