[project]
name = "pictrip-backend"
version = "0.1.0"
description = "PicTrip backend — FastAPI modular monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",
    "alembic",
    "pydantic-settings",
    "redis",
    "httpx",
    "structlog",
    "sentry-sdk[fastapi]",
]

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
