[project]
name = "pictrip-data"
version = "0.1.0"
description = "PicTrip KTO ETL pipeline (CT111) — separate from backend"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "httpx",
    "psycopg[binary]",
    "pydantic-settings",
    "structlog",
    "streamlit",
]

[dependency-groups]
dev = ["ruff", "pytest"]

[project.scripts]
pictrip-data = "pictrip_data.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pictrip_data"]
